--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "showtime",
+  "name": "movienow",
   "version": "0.1.0",
   "description": "display next movie showtime around you",
   "main": "server.js",
@@ -16,14 +16,16 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.11.1",
+    "cheerio": "^0.20.0",
     "connect-browser-sync": "^2.0.1",
     "connect-mongo": "^1.1.0",
     "lodash": "^4.5.0",
     "moment": "^2.11.2",
     "morgan": "^1.7.0",
-    "movie-art": "^1.0.6",
+    "omdb": "^0.5.0",
     "onchange": "^2.0.0",
     "parallelshell": "^2.0.0",
+    "request-promise": "^2.0.1",
     "route-parser": "0.0.4",
     "svgo": "^0.6.1",
     "watchify": "^3.7.0",
