--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "enwin <tifftafftoff@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-polyfill": "^6.6.1",
     "browser-sync": "^2.11.1",
     "cheerio": "^0.20.0",
     "connect-browser-sync": "^2.0.1",
