--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "mongoose": "^4.4.6",
     "serve-static": "^1.10.2",
     "showtimes": "enwin/showtimes",
+    "slack-node": "^0.2.0",
     "slug": "^0.9.1",
     "stylus": "^0.53.0"
   }
