--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "js-yaml": "^3.5.3",
     "lodash": "^4.5.0",
     "mongoose": "^4.4.6",
+    "piwik-tracker": "^0.1.2",
     "serve-static": "^1.10.2",
     "showtimes": "enwin/showtimes",
     "slack-node": "^0.2.0",
