--- a/package.json
+++ b/package.json
@@ -15,45 +15,44 @@
   "author": "enwin <tifftafftoff@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "babel-polyfill": "^6.6.1",
     "browser-sync": "^2.11.1",
     "connect-browser-sync": "^2.0.1",
-    "connect-mongo": "^1.1.0",
-    "moment": "^2.11.2",
     "morgan": "^1.7.0",
     "onchange": "^2.0.0",
     "parallelshell": "^2.0.0",
-    "request-promise": "^2.0.1",
-    "route-parser": "0.0.4",
-    "svgo": "^0.6.1",
-    "watchify": "^3.7.0",
-    "whatwg-fetch": "^0.11.0"
+    "svgo": "^0.7.1",
+    "watchify": "^3.7.0"
   },
   "dependencies": {
-    "autoprefixer-stylus": "^0.9.1",
-    "babel-preset-es2015": "^6.5.0",
-    "babelify": "^7.2.0",
-    "body-parser": "^1.15.0",
-    "browserify": "^13.0.0",
-    "browserify-middleware": "^7.0.0",
-    "cheerio": "^0.20.0",
-    "chouchenn": "^1.0.1",
-    "compression": "^1.6.1",
+    "autoprefixer-stylus": "^0.11.0",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
+    "body-parser": "^1.15.2",
+    "browser-sync": "^2.17.5",
+    "browserify": "^13.1.1",
+    "browserify-middleware": "^7.1.0",
+    "cheerio": "^0.22.0",
+    "chouchenn": "^1.0.2",
+    "compression": "^1.6.2",
     "connect-expires": "0.0.2",
-    "express": "^4.13.4",
-    "express-session": "^1.13.0",
+    "connect-mongo": "^1.3.2",
+    "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "fastclick": "^1.0.6",
     "geocoder": "^0.2.2",
     "jade": "^1.11.0",
     "jadeify": "^4.6.0",
-    "js-yaml": "^3.5.3",
-    "lodash": "^4.5.0",
-    "mongoose": "^4.4.6",
-    "piwik-tracker": "^0.1.2",
-    "serve-static": "^1.10.2",
-    "showtimes": "enwin/showtimes",
+    "js-yaml": "^3.6.1",
+    "lodash": "^4.16.6",
+    "moment": "^2.15.2",
+    "mongoose": "^4.6.6",
+    "piwik-tracker": "^1.0.0",
+    "route-parser": "0.0.4",
+    "serve-static": "^1.11.1",
+    "showtimes": "github:enwin/showtimes",
     "slack-node": "^0.2.0",
     "slug": "^0.9.1",
-    "stylus": "^0.53.0"
+    "stylus": "^0.54.5"
   }
 }
