--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "moment": "^2.15.2",
     "mongoose": "^4.6.6",
     "piwik-tracker": "^1.0.0",
+    "request": "^2.78.0",
+    "request-promise-native": "^1.0.3",
     "route-parser": "0.0.4",
     "serve-static": "^1.11.1",
     "showtimes": "github:enwin/showtimes",
