--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "serve": "nodemon",
-    "js": "browserify ./script/app.js -t [ babelify --presets [ es2015 ] ] -t jadeify -g uglifyify | uglifyjs -c -m > ./www/app.js",
+    "js": "rollup -c rollup-conf.js > ./www/app.js",
     "sw": "node setSWFile.js",
     "watch:sw": "onchange 'script/sw.js' -- npm run sw",
     "watch:js": "onchange 'script/app.js' -- npm run js",
@@ -26,38 +26,40 @@
   },
   "dependencies": {
     "autoprefixer-stylus": "^0.11.0",
+    "babel-plugin-external-helpers": "^6.8.0",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
+    "babel-preset-es2015": "^6.14.0",
     "body-parser": "^1.15.2",
     "browser-sync": "^2.17.5",
-    "browserify": "^13.1.1",
-    "browserify-middleware": "^7.1.0",
     "cheerio": "^0.22.0",
     "chouchenn": "^1.0.2",
     "compression": "^1.6.2",
     "connect-expires": "0.0.2",
     "connect-mongo": "^1.3.2",
     "express": "^4.14.0",
+    "express-middleware-rollup": "^1.1.0",
     "express-session": "^1.14.2",
     "fastclick": "^1.0.6",
     "geocoder": "^0.2.2",
-    "jade": "^1.11.0",
-    "jadeify": "^4.6.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.16.6",
     "moment": "^2.15.2",
     "mongoose": "^4.6.6",
     "piwik-tracker": "^1.0.0",
+    "pug": "^2.0.0-beta6",
     "request": "^2.78.0",
     "request-promise-native": "^1.0.3",
-    "route-parser": "0.0.4",
+    "rollup": "^0.38.0",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-commonjs": "^5.0.4",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-pug": "^0.1.2",
+    "rollup-plugin-uglify": "^1.0.1",
+    "route-parser": "0.0.5",
     "serve-static": "^1.11.1",
-    "showtimes": "github:enwin/showtimes",
     "slack-node": "^0.2.0",
     "slug": "^0.9.1",
     "stylus": "^0.54.5",
-    "uglifyify": "^3.0.4",
     "whatwg-fetch": "^2.0.1"
   }
 }
