--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-es2015": "^6.14.0",
     "body-parser": "^1.15.2",
     "browser-sync": "^2.17.5",
+    "celebrate": "^4.0.0",
     "cheerio": "^0.22.0",
     "chouchenn": "^1.0.2",
     "compression": "^1.6.2",
@@ -41,6 +42,7 @@
     "express-session": "^1.14.2",
     "fastclick": "^1.0.6",
     "geocoder": "^0.2.2",
+    "joi": "^10.0.6",
     "js-yaml": "^3.6.1",
     "lodash": "^4.16.6",
     "moment": "^2.15.2",
