add preversion linting

--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
   "description": "display next movie showtime around you",
   "main": "server.js",
   "scripts": {
-    "serve": "nodemon",
+    "build": "npm install --production && npm run js && npm run sw",
     "js": "rollup -c rollup-conf.js > ./www/app.js",
-    "sw": "node setSWFile.js",
-    "watch:sw": "onchange 'script/sw.js' -- npm run sw",
-    "watch:js": "onchange 'script/app.js' -- npm run js",
-    "svg": "svgo -f ./_source/svg --pretty --config=svgo.yml",
+    "jshint:browser": "jshint --reporter=node_modules/jshint-stylish script/**/*",
+    "jshint:server": "jshint --config .serverjshintrc --reporter=node_modules/jshint-stylish server/**/*.js",
+    "lint": "npm run jshint:server && npm run jshint:browser",
+    "preversion": "npm run lint",
+    "serve": "nodemon",
     "start": "npm run serve",
-    "build": "npm run js && npm run sw"
+    "svg": "svgo -f ./_source/svg --pretty --config=svgo.yml",
+    "sw": "node setSWFile.js",
+    "watch:js": "onchange 'script/app.js' -- npm run js",
+    "watch:sw": "onchange 'script/sw.js' -- npm run sw"
   },
   "author": "enwin <tifftafftoff@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.11.1",
     "connect-browser-sync": "^2.0.1",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
     "morgan": "^1.7.0",
     "onchange": "^2.0.0",
     "parallelshell": "^2.0.0",
