--- a/package.json
+++ b/package.json
@@ -20,53 +20,52 @@
   "author": "enwin <tifftafftoff@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.11.1",
-    "connect-browser-sync": "^2.0.1",
-    "jshint": "^2.9.4",
+    "babel-core": "^6.26.0",
+    "browser-sync": "^2.18.13",
+    "connect-browser-sync": "^2.1.0",
+    "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
-    "morgan": "^1.7.0",
+    "morgan": "^1.9.0",
     "onchange": "^2.0.0",
     "parallelshell": "^2.0.0",
-    "svgo": "^0.7.1",
-    "watchify": "^3.7.0"
+    "svgo": "^0.7.2",
+    "watchify": "^3.9.0"
   },
   "dependencies": {
-    "autoprefixer-stylus": "^0.11.0",
-    "babel-plugin-external-helpers": "^6.8.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.14.0",
-    "body-parser": "^1.15.2",
-    "browser-sync": "^2.17.5",
-    "celebrate": "^4.0.0",
+    "autoprefixer-stylus": "^0.14.0",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "body-parser": "^1.18.2",
+    "celebrate": "^7.0.1",
     "cheerio": "^0.22.0",
     "chouchenn": "^1.0.2",
-    "compression": "^1.6.2",
+    "compression": "^1.7.1",
     "connect-expires": "0.0.2",
-    "connect-mongo": "^1.3.2",
-    "express": "^4.14.0",
-    "express-middleware-rollup": "^1.1.0",
-    "express-session": "^1.14.2",
-    "geocoder": "^0.2.2",
-    "joi": "^10.0.6",
-    "js-yaml": "^3.6.1",
+    "connect-mongo": "^2.0.0",
+    "express": "^4.16.2",
+    "express-middleware-rollup": "^1.1.1",
+    "express-session": "^1.15.6",
+    "geocoder": "^0.2.3",
+    "js-yaml": "^3.10.0",
     "lodash": "^4.16.6",
-    "moment": "^2.15.2",
-    "mongoose": "^4.6.6",
-    "piwik-tracker": "^1.0.0",
-    "pug": "^2.0.0-beta6",
-    "request": "^2.78.0",
-    "request-promise-native": "^1.0.3",
-    "rollup": "^0.38.0",
-    "rollup-plugin-babel": "^2.6.1",
-    "rollup-plugin-commonjs": "^5.0.4",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-pug": "^0.1.2",
-    "rollup-plugin-uglify": "^1.0.1",
+    "moment": "^2.19.1",
+    "mongoose": "^4.13.1",
+    "piwik-tracker": "^1.1.2",
+    "pug": "^2.0.0-rc.4",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
+    "rollup": "^0.51.3",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-pug": "^0.1.6",
+    "rollup-plugin-uglify": "^2.0.1",
     "route-parser": "0.0.5",
-    "serve-static": "^1.11.1",
+    "serve-static": "^1.13.1",
     "slack-node": "^0.2.0",
     "slug": "^0.9.1",
     "stylus": "^0.54.5",
-    "whatwg-fetch": "^2.0.1"
+    "whatwg-fetch": "^2.0.3"
   }
 }
