--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,12 @@
 {
+  "exclude": "node_modules/!(@accede-web)/**",
+  "include": "node_modules/@accede-web/**",
   "presets": [
-    [ "es2015", {
-      "modules": false
+    [ "@babel/env", {
+      "modules": false,
+      "targets": {
+        "browsers": "last 2 versions, ie >= 11"
+      }
     }]
-  ],
-  "plugins": [
-    "external-helpers"
   ]
 }
