--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "npm run serve",
     "svg": "svgo -f ./_source/svg --pretty --config=svgo.yml",
     "sw": "node setSWFile.js",
-    "watch:js": "onchange 'script/app.js' -- npm run js",
+    "watch:js": "onchange 'script/**/*.js' -- npm run js",
     "watch:sw": "onchange 'script/sw.js' -- npm run sw"
   },
   "author": "enwin <tifftafftoff@gmail.com>",
@@ -26,16 +26,19 @@
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
     "morgan": "^1.9.0",
+    "nodemon": "^1.18.9",
     "onchange": "^2.0.0",
     "parallelshell": "^2.0.0",
     "svgo": "^0.7.2",
     "watchify": "^3.9.0"
   },
   "dependencies": {
+    "@accede-web/tablist": "^2.0.1",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "autoprefixer-stylus": "^0.14.0",
-    "babel-plugin-external-helpers": "^6.22.0",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
     "celebrate": "^7.0.1",
     "cheerio": "^0.22.0",
@@ -44,28 +47,30 @@
     "connect-expires": "0.0.2",
     "connect-mongo": "^2.0.0",
     "express": "^4.16.2",
-    "express-middleware-rollup": "^1.1.1",
+    "express-middleware-rollup": "^2.0.0",
     "express-session": "^1.15.6",
     "geocoder": "^0.2.3",
     "js-yaml": "^3.10.0",
     "lodash": "^4.16.6",
     "moment": "^2.19.1",
     "mongoose": "^4.13.1",
+    "node-geocoder": "^3.22.0",
+    "path-parser": "^4.2.0",
     "piwik-tracker": "^1.1.2",
-    "pug": "^2.0.0-rc.4",
+    "pug": "^2.0.3",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
-    "rollup": "^0.51.3",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-pug": "^0.1.6",
-    "rollup-plugin-uglify": "^2.0.1",
+    "rollup": "^0.68.1",
+    "rollup-plugin-babel": "^4.1.0",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-pug": "^1.1.0",
+    "rollup-plugin-terser": "^3.0.0",
     "route-parser": "0.0.5",
     "serve-static": "^1.13.1",
     "slack-node": "^0.2.0",
     "slug": "^0.9.1",
     "stylus": "^0.54.5",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^3.0.0"
   }
 }
